Corrected terrible misspellings

--- a/Solution1/CarHire.WebUI/Views/Home/Index.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Home/Index.cshtml
@@ -39,6 +39,6 @@
     }
     else if (Session["Category"].Equals("Pracownik"))
     {
-        <h3>Jesteś zalogowany jako pracownik wyporzyczalni</h3>
+        <h3>Jesteś zalogowany jako pracownik wypożyczalni</h3>
         }
 </div>
