--- a/Solution1/CarHire.WebUI/Views/Nav/Menu.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Nav/Menu.cshtml
@@ -11,7 +11,7 @@ else if (Session["Category"].Equals("Kierownik"))
     @Html.ActionLink("Samochody", "Holder", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Wnioski", "ActionList", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Oddaj auto", "ReturnList", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
-    @Html.ActionLink("Wyporzyczenia firmy", "Index", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
+    @Html.ActionLink("Wypożyczenia firmy", "Index", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Użytkownicy", "Holder", "Users", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Dodaj pracownika", "SignIn", "Users", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Edycja Danych", "Edit", "Users", new { userId = x }, new { @class = "btn btn-block btn-default btn-lg" })
