--- a/Solution1/CarHire.WebUI/Views/Rental/ActionList.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Rental/ActionList.cshtml
@@ -13,7 +13,7 @@
         <tr>
             <th class="text-center">Nr.</th>
             <th class="text-center">Kto wypożyczał</th>
-            <th class="text-center">wyporzyczone auto</th>
+            <th class="text-center">wypożyczone auto</th>
             <th class="text-center">Data wypożyczenia</th>
             <th class="text-center">Data Zwrotu</th>
             <th class="text-center">Data Przedłużenia</th>
