--- a/Solution1/CarHire.WebUI/Views/Rental/Edit.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Rental/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarHire.Domain.Entities.Rental
 
 @{
-    ViewBag.Title = "Wyporzyczenie";
+    ViewBag.Title = "Wypożyczenie";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
