--- a/Solution1/CarHire.WebUI/Views/Rental/Index.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Rental/Index.cshtml
@@ -12,10 +12,10 @@
             <tr>
                 <th class="text-center">Nr.</th>
                 <th class="text-center">Kto wypożyczał</th>
-                <th class="text-center">wyporzyczone auto</th>
+                <th class="text-center">wypożyczone auto</th>
                 <th class="text-center">Data wypożyczenia</th>
                 <th class="text-center">Data Zwrotu</th>
-                <th class="text-center">Koszt wyporzyczenia</th>
+                <th class="text-center">Koszt wypożyczenia</th>
                 <th class="text-center">Akcje</th>
                 
             </tr>
