--- a/Solution1/CarHire.WebUI/Views/Shared/_Layout.Mobile.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Shared/_Layout.Mobile.cshtml
@@ -3,8 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
     <title>@ViewBag.Title</title>
@@ -24,6 +28,7 @@
                     @Html.ActionLink("Logowanie", "Login", "Home", null, new { @class = "pull-right label label-success" })
                 }
                 @Html.Action("Menu", "Nav")
+                
 </div>
         <div data-role="content">
             <ul data-role="listview" data-divider-theme="b" data-inset="false">
