--- a/Solution1/CarHire.WebUI/Views/Users/Holder.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Users/Holder.cshtml
@@ -16,6 +16,7 @@
                 <th class="text-center">Nr.</th>
                 <th class="text-center">Imie</th>
                 <th class="text-center">Nazwisko</th>
+                <th class="text-center">Kategoria</th>
                 <th class="text-center">Akcje</th>
             </tr>
             @{ 
@@ -30,6 +31,7 @@
                     }
                     <td class="text-center">@item.Name</td>
                     <td class="text-center">@item.Surname</td>
+                    <td class="text-center">@item.Category</td>
                     <td class="text-center">
                         @using (Html.BeginForm("Delete", "Users"))
                         {
