--- a/Solution1/CarHire.WebUI/Views/Car/Search.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Car/Search.cshtml
@@ -1,6 +1,24 @@
 ﻿
 @{
     ViewBag.Title = "Search";
+
+    List<SelectListItem> list = new List<SelectListItem>();
+    SelectListItem add = new SelectListItem() { Text = "AM", Value = "AM" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "A1", Value = "A1" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "A2", Value = "A2" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "A", Value = "A" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "B", Value = "B" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "B+E", Value = "B+E" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "B1", Value = "B1" };
+    list.Add(add);
+    add = new SelectListItem() { Text = "C", Value = "C" };
+    list.Add(add);
 }
 
 <h2>Wyszukiwanie zaawansowane</h2><br />
@@ -35,12 +53,24 @@
             Od: <input type="number" step="0.1" name="MinCapacity">
             Do: <input type="number" step="0.1" name="MaxCapacity">
         </div>
+    <div><b>Kategoria</b></div>
+        <div>
+            <select name="Category">
+                <option value=""></option>
+                <option value="A1">A1</option>
+                <option value="A2">A2</option>
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="B+E">B+E</option>
+                <option value="B1">B1</option>
+                <option value="C">C</option>
+             </select>
+        </div>
     <div><b>Szukaj tylko</b></div>
     <div>
         <input type="radio" name="Hired" value="false">Dostepnych<br>
         <input type="radio" name="Hired" value="true">Wypożyczonych<br>
     </div>
-
     <input type="submit" value="Szukaj" />
 }
 
