Przenoszenie wartości do wyszukiwania zaawansowanego

--- a/Solution1/CarHire.WebUI/Views/Car/List.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Car/List.cshtml
@@ -38,7 +38,7 @@
     </div>
    
 }
-<br />@Html.ActionLink("Wyszukiwanie zaawansowane", "Search")<br /><br />
+<br />@Html.ActionLink("Wyszukiwanie zaawansowane", "Search", Model.CarSearch)<br /><br />
 
 @foreach (var p in Model.CarListViewModel.Cars)
 {
