--- a/Solution1/CarHire.WebUI/Views/Rental/Index.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Rental/Index.cshtml
@@ -106,4 +106,5 @@
                                         }
                                         }
         </table>
+        <br />@Html.ActionLink("Exportuj", "ExportToExcel", "Rental", null, new { @class = "btn btn-default btn-md" })
     </div>
